objects/ASI_TH_CRM_Contract_Spending__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Activity_Cash__c</fullName>
        <label>Activity - Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Activity_FOC__c</fullName>
        <label>Activity - FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract_Spending_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Spending External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Spendings</relationshipLabel>
        <relationshipName>ASI_TH_CRM_CS_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Advance__c</fullName>
        <label>Fund - Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Cash__c</fullName>
        <label>Fund - Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_FOC__c</fullName>
        <label>Fund - FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Rebate__c</fullName>
        <label>Fund - Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Spending</label>
    <nameField>
        <label>Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Spendings</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Contract_Spending</fullName>
        <active>true</active>
        <label>ASI TH CRM Contract Spending</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_TH_CRM_ContractSpendingLocked</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ASI_TH_CRM_Locked__c = true,
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;)),
NOT( CONTAINS( $UserRole.DeveloperName,&apos;Commercial_Analyst&apos;))
)</errorConditionFormula>
        <errorMessage>The Contract Spending record is Locked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_ContractSpendingUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Draft&apos;, TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Editing&apos;,
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>Contract Spending can only be edited when Contract Status is Draft or Editing.</errorMessage>
    </validationRules>
</CustomObject>